# aigd-calibration

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/baselines/: base_config.yaml  clip_bce.yaml  clip_bsce.yaml  clip_bsce_adaptive.yaml  clip_ce.yaml  clip_diff_dml.yaml  clip_focal.yaml  clip_label_smoothing.yaml  resnet50_bce.yaml  resnet50_bce_ddp.yaml  vit_label_smoothing.yaml
configs/calibration/: temperature.yaml
configs/splits/: cross_generator.yaml
data/: README.md  download_tiny_genimage.py
docs/: CLI.md  EXPERIMENTS.md
src/aigd_calibration/: __init__.py
src/aigd_calibration/artifacts/: __init__.py  checkpoints.py  logits.py  run_dir.py  tables.py
src/aigd_calibration/cli/: calibrate.py  eval.py  main.py  report.py  split.py  train.py
src/aigd_calibration/config/: __init__.py  defaults.py  loader.py  schema.py
src/aigd_calibration/data/: __init__.py  datamodule.py  dataset.py  metadata.py  splits.py  transforms.py
src/aigd_calibration/evaluation/: __init__.py  evaluator.py  group_analysis.py  metrics.py  reliability.py  report.py
src/aigd_calibration/lightning/: __init__.py  callbacks.py  checkpointing.py  loggers.py  trainer.py
src/aigd_calibration/methods/: __init__.py
src/aigd_calibration/methods/post_hoc/: __init__.py  (+3 more)
src/aigd_calibration/models/: __init__.py  base.py  clip_model.py  heads.py  registry.py  timm_model.py
src/aigd_calibration/training/: __init__.py  loop.py  optimizer.py  scheduler.py
src/aigd_calibration/utils/: __init__.py  device.py  io.py  logging.py  seed.py
(+12 files in other folders)
