[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigd-calibration"
version = "0.1.0"
description = "Calibration-aware experiments for AI-generated image detection under cross-generator shift."
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.2",
    "torch",
    "torchvision",
    "numpy>=1.24",
    "scipy>=1.10",
    "pillow>=10",
    "opencv-python>=4.8",
    "pyyaml>=6",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "timm>=0.9",
    "transformers>=4.40",
]

[project.scripts]
aigd = "aigd_calibration.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
